Update and rename mplabx.html to mplab/mplabx.html

--- a/mplab/mplabx.html
+++ b/mplab/mplabx.html
@@ -150,7 +150,7 @@
     </div>
     <script>
     function back(){
-        location.replace("deci.html");
+        location.replace("index.html");
     }
     </script>
     </body>
