--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         
-        <div class="hero-text"><img src="pc-03.png" id="pc" class="icon" onmouseover="pcText()">
+        <div class="hero-text"><img src="deciraisah.github.io/pc-03.png" id="pc" class="icon" onmouseover="pcText()">
         <br>hello there<br>
 
             <div class="col-12">
