--- a/mplab/mplabx.html
+++ b/mplab/mplabx.html
@@ -150,7 +150,7 @@
     </div>
     <script>
     function back(){
-        location.replace("index.html");
+        location.replace("https://deciraisah.github.io/");
     }
     </script>
     </body>
