--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     }
 
     function mplabOpen(){
-        location.replace("https://deciraisah.github.io/mplabx.html");
+        location.replace("mplab/mplabx.html");
     }
 	
     </script>
