--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <script>
     function pcText(){
-        document.getElementById("pc").innerHTML="Hi I'm PC. Short for Potato Couch.";
+        document.getElementById("pc").src='pc-04.png';
     }
 
     function mplabOpen(){
