--- a/index.html
+++ b/index.html
@@ -20,7 +20,16 @@
 
     <script>
     function pcText(){
+	flag = 1;
+	if (flag == 1){
         document.getElementById("pc").src='pc-04.png';
+	flag = 0; 
+	    }
+	else {
+	document.getElementById("pc").src='pc-03.png';
+	flag = 1;
+	}
+	
     }
 
     function mplabOpen(){
