--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         
-        <div class="hero-text"><img src="deciraisah.github.io/pc-03.png" id="pc" class="icon" onmouseover="pcText()">
+        <div class="hero-text"><img src="deciraisah.github.io/pc-03.png" id="pc" class="icon" onmouseover="pcText(1)">
         <br>hello there<br>
 
             <div class="col-12">
@@ -19,8 +19,8 @@
         
 
     <script>
-    function pcText(){
-	flag = 1;
+    function pcText(a){
+	var flag;
 	if (flag == 1){
         document.getElementById("pc").src='pc-04.png';
 	flag = 0; 
@@ -29,7 +29,7 @@
 	document.getElementById("pc").src='pc-03.png';
 	flag = 1;
 	}
-	
+	return flag;
     }
 
     function mplabOpen(){
