--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         
-        <div class="hero-text"><img src="deciraisah.github.io/pc-03.png" id="pc" class="icon" onmouseover="pcText(1)">
+        <div class="hero-text"><img src="deciraisah.github.io/pc-03.png" id="pc" class="icon" onmouseover="pcText(a)">
         <br>hello there<br>
 
             <div class="col-12">
@@ -21,9 +21,10 @@
     <script>
     function pcText(a){
 	var flag;
+	    flag++;
 	if (flag == 1){
         document.getElementById("pc").src='pc-04.png';
-	flag = 0; 
+	flag--; 
 	    }
 	else {
 	document.getElementById("pc").src='pc-03.png';
