--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         
-        <div class="hero-text"><img src="deciraisah.github.io/pc-03.png" id="pc" class="icon" onmouseover="pcText(a)">
+        <div class="hero-text"><img src="deciraisah.github.io/pc-03.png" id="pc" class="icon" onmouseover="pcText(1)">
         <br>hello there<br>
 
             <div class="col-12">
@@ -21,7 +21,6 @@
     <script>
     function pcText(a){
 	var flag;
-	    flag++;
 	if (flag == 1){
         document.getElementById("pc").src='pc-04.png';
 	flag--; 
