--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 
     <script>
     function pcText(a){
-	var flag;
-	if (flag == 1){
+	var a;
+	if (a == 1){
         document.getElementById("pc").src='pc-04.png';
-	flag--; 
+	a = 0; 
 	    }
 	else {
 	document.getElementById("pc").src='pc-03.png';
-	flag = 1;
+	a = 1;
 	}
-	return flag;
+	return a;
     }
 
     function mplabOpen(){
