--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         
-        <div class="hero-text"><img src="deciraisah.github.io/pc-03.png" id="pc" class="icon" onmouseover="pcImg(1)">
+        <div class="hero-text"><img src="deciraisah.github.io/pc-03.png" id="pc" class="icon" onmouseover="pcImg()">
 	<!--<img id="img1" src ="deciraisah.github.io/pc-03.png">
 	<img id="img2" src ="deciraisah.github.io/pc-04.png">-->
         <br>hello there<br>
@@ -21,19 +21,9 @@
         
 
     <script>
-    function pcImg(a){
-	var a;
+    function pcImg(){
 	    var org = document.getElementById("pc");
-	    var img1 = "deciraisah.github.io/pc-03.png";
-	    var img2 = document.getElementById("img2");
-	if (org == img1){
-		document.getElementById("pc").src='img2';
-	}
-	 else{
-		 document.getElementById("pc").src='img1';
-	 }
-
-	return a;
+	    var img1 = org.src='pc-04.png';
 	
     }
 function 
