--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
     <script>
     function pcImg(){
-	    var org = document.getElementById("pc");
-	    var img1 = org.src='pc-04.png';
-	
+        document.getElementById("pc").src='pc-04.png';
+    }
+
     }
 function 
 
