--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <script>
     function pcImg(){
-        document.getElementById("pc").src='pc-04.png';
+        document.getElementById("pc").src='deciraisah.github.io/pc-04.png';
     }
 
     }
