--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         
-        <div class="hero-text"><img src="deciraisah.github.io/pc-03.png" id="pc" class="icon" onmouseover="pcImg()">
+        <div class="hero-text"><img src="deciraisah.github.io/pc-03.png" id="pc" class="icon" onmouseover="pcImg(a)">
 	<!--<img id="img1" src ="deciraisah.github.io/pc-03.png">
 	<img id="img2" src ="deciraisah.github.io/pc-04.png">-->
         <br>hello there<br>
@@ -21,8 +21,19 @@
         
 
     <script>
-    function pcImg(){
-        document.getElementById("pc").src='deciraisah.github.io/pc-04.png';
+    function pcImg(a){
+	var a;
+        //document.getElementById("pc").src='deciraisah.github.io/pc-04.png';
+	//a++;
+	    if (a!=1)
+	    {
+	    document.getElementById("pc").src='deciraisah.github.io/pc-04.png';
+		    a++;
+	    }
+	    else {
+	    document.getElementById("pc").src='deciraisah.github.io/pc-03.png';
+		    a--;
+	    }
     }
 
     function mplabOpen(){
