--- a/index.html
+++ b/index.html
@@ -29,11 +29,14 @@
 	    {
 	    document.getElementById("pc").src='deciraisah.github.io/pc-04.png';
 		    a++;
+		    alert (a);
 	    }
 	    else {
 	    document.getElementById("pc").src='deciraisah.github.io/pc-03.png';
 		    a--;
+		    alert (a);
 	    }
+	    return a;
     }
 
     function mplabOpen(){
