--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
     <script>
     function pcImg(a){
 	var a;
+	    alert (a);
         //document.getElementById("pc").src='deciraisah.github.io/pc-04.png';
 	//a++;
-	    if (a!=1)
+	   /* if (a!=1)
 	    {
 	    document.getElementById("pc").src='deciraisah.github.io/pc-04.png';
 		    a++;
@@ -36,7 +37,7 @@
 		    a--;
 		    alert (a);
 	    }
-	    return a;
+	    return a;*/
     }
 
     function mplabOpen(){
