--- a/index.html
+++ b/index.html
@@ -32,13 +32,12 @@
 		    a++;
 		    alert (a);
 	    }
-	    /*
 	    else {
 	    document.getElementById("pc").src='deciraisah.github.io/pc-03.png';
 		    a--;
 		    alert (a);
 	    }
-	    return a;*/
+	    return a;
     }
 
     function mplabOpen(){
