--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         
-        <div class="hero-text"><img src="deciraisah.github.io/pc-03.png" id="pc" class="icon" onmouseover="pcImg(0)">
+        <div class="hero-text"><img src="deciraisah.github.io/pc-03.png" id="pc" class="icon" onmouseover="pcImg(0)" onmouseout="pcImg(1)">
 	<!--<img id="img1" src ="deciraisah.github.io/pc-03.png">
 	<img id="img2" src ="deciraisah.github.io/pc-04.png">-->
         <br>hello there<br>
@@ -23,7 +23,6 @@
     <script>
     function pcImg(a){
 	var a;
-	    
         //document.getElementById("pc").src='deciraisah.github.io/pc-04.png';
 	    if (a<1)
 	    {
