--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 	    document.getElementById("pc").src='deciraisah.github.io/pc-04.png';
 		    a = 1;
 		    alert (a);
+		    return a;
 	    }
 	    else {
 	    document.getElementById("pc").src='deciraisah.github.io/pc-03.png';
