--- a/index.html
+++ b/index.html
@@ -28,13 +28,15 @@
 	    {
 	    document.getElementById("pc").src='deciraisah.github.io/pc-04.png';
 		    a = 1;
-		    alert (a);
+		    //alert (a);
+		    break;
 		    return a;
 	    }
 	    else {
 	    document.getElementById("pc").src='deciraisah.github.io/pc-03.png';
 		    a = 0;
-		    alert (a);
+		    //alert (a);
+		    break;
 		    return a;
 	    }
 	    
