--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <script>
     function pcImg(){
-	 var a;
+	 int a;
 	   document.getElementById("pc").src='deciraisah.github.io/pc-04.png';
 	   a++;
 	   alert (a);
