--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
         
 
     <script>
+    int a = 0;
     function pcImg(){
-	 int a;
+	 
 	   document.getElementById("pc").src='deciraisah.github.io/pc-04.png';
 	   a++;
 	   alert (a);
