--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         
 
     <script>
-    int a = 0;
+    //int a = 0;
     function pcImg(){
 	 
 	   document.getElementById("pc").src='deciraisah.github.io/pc-04.png';
