--- a/index.html
+++ b/index.html
@@ -21,15 +21,14 @@
         
 
     <script>
-    //int a = 0;
+    int a = 0;
     function pcImg(){
 	 
 	   document.getElementById("pc").src='deciraisah.github.io/pc-04.png';
 	   a++;
 	   alert (a);
-	 /*   if (a>1){
+	 /*if (a>1){
 	   document.getElementById("pc").src='deciraisah.github.io/pc-03.png';
-	    
 	    }*/
 	
     }
