--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     int a = 0;
     function pcImg(){
 	 
-	   document.getElementById("pc").src='deciraisah.github.io/pc-04.png';
+	   document.getElementById("pc").src='pc-04.png';
 	   a++;
 	   alert (a);
 	 /*if (a>1){
