--- a/index.html
+++ b/index.html
@@ -21,12 +21,9 @@
         
 
     <script>
-    int a = 0;
     function pcImg(){
-	 
-	   document.getElementById("pc").src='pc-04.png';
-	   a++;
-	   alert (a);
+	 var img1 = document.getElementById("pc");
+	  img1.src='pc-04.png';
 	 /*if (a>1){
 	   document.getElementById("pc").src='deciraisah.github.io/pc-03.png';
 	    }*/
