--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
 
     <script>
     function pcImg(){
-	 var img1 = document.getElementById("pc");
-	  img1.src='pc-04.png';
+	 var pcImg = document.getElementById("pc").src;
+	 var img1.src='pc-03.png';
+	 var img2.src='pc-04.png';
+	    alert (pcImg);
 	 /*if (a>1){
 	   document.getElementById("pc").src='deciraisah.github.io/pc-03.png';
 	    }*/
