--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	 var pcImg = document.getElementById("pc").src;
 	 var img1.src='pc-03.png';
 	 var img2.src='pc-04.png';
-	    alert (""note: "+ pcImg);
+	    alert ("note: "+ pcImg);
 	 /*if (a>1){
 	   document.getElementById("pc").src='deciraisah.github.io/pc-03.png';
 	    }*/
