--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
     <script>
     function pcImg(){
-	 var pcImg = document.getElementById("pc").src;
+	 var pcPc = document.getElementById("pc").src;
 	 var img1.src='pc-03.png';
 	 var img2.src='pc-04.png';
-	    alert ("note: "+ pcImg);
+	    alert ("note: "+ pcPc);
 	 /*if (a>1){
 	   document.getElementById("pc").src='deciraisah.github.io/pc-03.png';
 	    }*/
