--- a/index.html
+++ b/index.html
@@ -23,13 +23,12 @@
     <script>
     function pcImg(){
 	 var pcPc = document.getElementById("pc").src;
-	 var img1.src='pc-03.png';
-	 var img2.src='pc-04.png';
-	    alert ("note: "+ pcPc);
+	 //var img1.src='pc-03.png';
+	 //var img2.src='pc-04.png';
+	    alert ("note: ");
 	 /*if (a>1){
 	   document.getElementById("pc").src='deciraisah.github.io/pc-03.png';
 	    }*/
-	
     }
 	    
 
