--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="aysa_site/style.css">
     </head>
     <body>
-        <img src="main-logo.png" alt="Aysa's Library">
+        <img src="aysa_site/main-logo.png" alt="Aysa's Library">
         <div>
           <a href="https://www.etsy.com/shop/LibraryOfAysa" class="btns"><b>Etsy Shop</a>
           <a href="https://www.instagram.com/aysa.library/" class="btns"><b>Instsagram</a>
