--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img src="aysa_site/main-logo.png" alt="Aysa's Library">
         <div>
           <a href="https://www.etsy.com/shop/LibraryOfAysa" class="btns"><b>Etsy Shop</a>
-          <a href="https://www.instagram.com/aysa.library/" class="btns"><b>Instsagram</a>
+          <a href="https://www.instagram.com/aysa.library/" class="btns"><b>Instagram</a>
           <a href="https://www.youtube.com/channel/UCJ7blRvGKV2MrIwU59vjhjA" class="btns"><b>YouTube</a>
         </div>
     </body>
