--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="aysa_site/style.css">
     </head>
     <body>
-        <img src="aysa_site/main-logo.png" alt="Aysa's Library">
+        <img src="aysa_site/Aysa_Lib.png" alt="Aysa's Library">
         <div>
           <a href="https://www.etsy.com/shop/LibraryOfAysa" class="btns"><b>Etsy Shop</a>
           <a href="https://www.instagram.com/aysa.library/" class="btns"><b>Instagram</a>
