added some stuff

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
         <img src="aysa_site/lib-gif.gif" alt="Aysa's Library">
         <div>
           <a href="https://www.etsy.com/shop/LibraryOfAysa" class="btns"><b>Etsy Shop</a>
-          <a href="https://www.instagram.com/aysa.library/" class="btns"><b>Instagram</a>
-          <a href="https://www.youtube.com/channel/UCJ7blRvGKV2MrIwU59vjhjA" class="btns"><b>YouTube</a>
-          <h1>2022 Portfolio</h1>
-            <iframe src="/uploads/media/default/0001/01/540cb75550adf33f281f29132dddd14fded85bfc.pdf" width="100%" height="500px">
+          <a href="aysa_site/portfolio_2022.pdf" class="btns"><b>A Short Porfolio 2022</a>
+          <a href="https://youtu.be/MWpHhiuXZlU" class="btns"><b>Educational Technology Research Milestone 1</a>
+          <a href="https://youtu.be/qc8XmKpe-Go" class="btns"><b>Educational Technology Research Milestone 2</a>
+          <a href="https://medium.com/@decirh/3-lessons-to-live-a-lazy-but-somewhat-productive-life-dabb331e199e" class="btns"><b>Medium Article:<br>
+              3 Lessons to Live a Lazy but somewhat Productive Life</a>    
         </div>
     </body>
 </html>
