--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img src="aysa_site/lib-gif.gif" alt="Aysa's Library">
         <div>
           <a href="https://www.etsy.com/shop/LibraryOfAysa" class="btns"><b>Etsy Shop</a>
-          <a href="aysa_site/portfolio_2022.pdf" class="btns"><b>A Short Porfolio 2022</a>
+          <a href="https://github.com/deciraisah/deciraisah.github.io/blob/master/aysa_site/portfolio_2022.pdf" class="btns"><b>A Short Porfolio 2022</a>
           <a href="https://youtu.be/MWpHhiuXZlU" class="btns"><b>Educational Technology Research Milestone 1</a>
           <a href="https://youtu.be/qc8XmKpe-Go" class="btns"><b>Educational Technology Research Milestone 2</a>
           <a href="https://medium.com/@decirh/3-lessons-to-live-a-lazy-but-somewhat-productive-life-dabb331e199e" class="btns"><b>Medium Article:<br>
