--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         <link rel="stylesheet" href="aysa_site/style.css">
     </head>
     <body>
-        <img src="aysa_site/lib-gif.gif" alt="Aysa's Library">
+        <!--img src="aysa_site/lib-gif.gif" alt="Aysa's Library"-->
+        <h1 class = "btns">Deci Raisa L.</h1>
         <div>
           <!--<a href="https://www.etsy.com/shop/LibraryOfAysa" class="btns"><b>Etsy Shop</a-->
           <a href="https://github.com/deciraisah/deciraisah.github.io/blob/master/aysa_site/portfolio_2022.pdf" class="btns"><b>A Short Porfolio 2022</a>
